# PyConflict

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
src/pyconflict/: __init__.py
src/pyconflict/application/: exceptions.py
src/pyconflict/application/use_cases/: __init__.py  check_add_package.py  get_latest_stable.py
src/pyconflict/domain/: entities.py  exceptions.py  repositories.py
src/pyconflict/domain/services/: conflict_detector.py  suggestion_generator.py  version_resolver.py
src/pyconflict/infrastructure/: exceptions.py
src/pyconflict/infrastructure/repositories/: disk_cache_repository.py  pip_environment_repository.py  pypi_repository.py
src/pyconflict/presentation/: __init__.py
src/pyconflict/presentation/cli/: commands.py  di.py  formatters.py
tests/: __init__.py
tests/unit/application/: test_check_add_package.py  test_get_latest_stable.py
tests/unit/domain/: test_conflict_detector.py  test_version_resolver.py
